--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 /* Fuentes */
 @font-face {
   font-family: "Montserrat";
-  src: url(./Fuentes/Montserrat-Regular.ttf) format("truetype");
+  src: url(./fonts/Montserrat-Regular.ttf) format("truetype");
   font-weight: 400;
   font-style: normal;
 }
@@ -144,6 +144,45 @@ body {
   transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
 
+/* Barra navegacion*/
+nav {
+    background-image: linear-gradient(to left, #dbdcd7 0%, #d7ddd7 25%, #c9e2cd 45%, #62e76d 65%, #23b82a 100%);
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background-color: #111111ea;
+    justify-items: center;
+    padding: 10px 0;
+    border-radius: 5px;
+    box-shadow: 0 12px 20px rgba(33, 109, 30, 0.7);
+    backdrop-filter: blur(10px);
+    transition: all 1s ease-out;
+  }
+  
+  nav:hover {
+    box-shadow: 0 20px 40px rgba(33, 109, 30, 1.5);
+  }
+  
+  nav ul {
+    margin: 15px 10px;
+    list-style: none;
+    align-items: center;
+    display: flex;
+    gap: 30px;
+  }
+  
+  nav a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    transition: color 0.3s ease;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
+  }
+  
+  nav a:hover {
+    color: #063809;
+  }
+  
 
 /* Animaciones */
 @keyframes deslizar {
