--- a/styles.css
+++ b/styles.css
@@ -483,3 +483,78 @@ footer {
     font-size: 0.9rem;
     margin: 5px 0;
   }
+
+  /* Manejo responsivo */
+@media (max-width: 768px) {
+    nav {
+      position: static;
+      align-items: center;
+    }
+  
+    nav ul {
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+  
+    nav li {
+      margin: 2px 0px;
+    }
+  
+    body {
+      padding-top: 0px;
+      box-sizing: border-box;
+    }
+  
+    section {
+      scroll-margin-top: 10px;
+    }
+  
+    #inicio {
+      height: auto;
+      aspect-ratio: 5 / 4;
+    }
+  
+    .glass-box {
+      padding: 15px 20px;
+      border-radius: 15px;
+      margin-bottom: 15px;
+    }
+  
+    .glass-box2 {
+      padding: 10px 15px;
+    }
+  
+    #inicio h1 {
+      font-size: 2em;
+    }
+  
+    #inicio h2 {
+      font-size: 1em;
+    }
+    .footer-content {
+      grid-template-columns: 1fr;
+      gap: 20px;
+    }
+    
+    .footer-section {
+      text-align: center;
+    }
+    
+    .footer-section h4::after {
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    
+    .footer-section p, 
+    .footer-section li {
+      text-align: center;
+    }
+    
+    .social-icons {
+      justify-content: center;
+    }
+  }
